# sir-seir-epidemic-modeling

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
app/: dash_app.py  streamlit_app.py
app/assets/: episim-clientside.js  theme.css
data/: sample_cases.csv
notebooks/: README.md
scripts/: benchmark_profiles.py
src/episim/: __init__.py  dashboard.py  models.py  plotting.py  presets.py  simulation.py  utils.py
tests/: test_dash_app.py  test_dashboard_profiles.py  test_models.py
