[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sir-seir-epidemic-modeling"
version = "0.1.0"
description = "Interactive SIR and SEIR epidemic modeling with fast simulations and a Streamlit dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Thomas" }]
dependencies = [
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "plotly>=6.0.0",
  "streamlit>=1.45.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.12.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
